--- a/our_story.html
+++ b/our_story.html
@@ -24,8 +24,8 @@
 
         <div class="collapse navbar-collapse" id="navbarMenu">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="our_story.html">Our Story</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="#">Our Story</a>
             <a class="nav-link" href="location.html">Location</a>
           </div>
         </div>
