--- a/our_story.html
+++ b/our_story.html
@@ -10,7 +10,14 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="icon" 
+    type="image/png" 
+    href="img/chouayonglogo.png">
+
     <title>Choua & Yong</title>
+   
+
+
   </head>
   <body>
 
@@ -25,14 +32,18 @@
         <div class="collapse navbar-collapse" id="navbarMenu">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link" href="#">Our Story</a>
+            <a class="nav-link" href="our_story.html">Our Story</a>
             <a class="nav-link" href="location.html">Location</a>
           </div>
         </div>
       </div>
     </nav>
   </nav>
-  <img src="img/Frontpage.png" style="width: 70%" class="responsive">
+  <h1>Choua & Yong</h1>
+  <img src="img/chouayong1.jpg" style="width: 70%" class="responsive">
+  <h2>October 16, 2021</h2>
+  <h2>2928 N Millbrook Avenue</h2>
+  <h2>Fresno, CA 93703</h2>
   </div>
 
 
