--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="icon" 
+    type="image/png" 
+    href="img/chouayonglogo.png">
+
     <title>Choua & Yong</title>
+   
+
+
   </head>
   <body>
 
@@ -32,7 +39,11 @@
       </div>
     </nav>
   </nav>
-  <img src="img/Frontpage.png" style="width: 70%" class="responsive">
+  <h1>Choua & Yong</h1>
+  <img src="img/chouayong1.jpg" style="width: 70%" class="responsive">
+  <h2>October 16, 2021</h2>
+  <h2>2928 N Millbrook Avenue</h2>
+  <h2>Fresno, CA 93703</h2>
   </div>
 
 
