--- a/location.html
+++ b/location.html
@@ -10,7 +10,14 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="icon" 
+    type="image/png" 
+    href="img/chouayonglogo.png">
+
     <title>Choua & Yong</title>
+   
+
+
   </head>
   <body>
 
@@ -26,13 +33,18 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             <a class="nav-link" href="our_story.html">Our Story</a>
-            <a class="nav-link" href="#">Location</a>
+            <a class="nav-link" href="location.html">Location</a>
           </div>
         </div>
       </div>
     </nav>
   </nav>
-  <img src="img/Frontpage.png" style="width: 70%" class="responsive">
+  <h2>October 16, 2021</h2>
+  <h2>2928 N Millbrook Avenue</h2>
+  <h2>Fresno, CA 93703</h2>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.7195396149377!2d-119.76547244887851!3d36.777295076589475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945dc22e9c8361%3A0x58a484d19e24340c!2s2928%20N%20Millbrook%20Ave%2C%20Fresno%2C%20CA%2093703!5e0!3m2!1sen!2sus!4v1630283689803!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
   </div>
 
 
