--- a/index.html
+++ b/index.html
@@ -5,46 +5,84 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <link rel="icon" 
-    type="image/png" 
-    href="img/chouayonglogo.png">
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
+     <!-- Styles css -->
+     <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Browser Title -->
     <title>Choua & Yong</title>
-   
-
-
   </head>
+
+
   <body>
 
-<div class="container">
-  <nav class="navbar navbar-light justify-content-center" style="background-color:rgb(253,247,242);">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
+    <!-- Navbar -->
+    <nav style="text-align: center">
+      <ul>
+      <li><a href="#top">Save the date</a></li>
+      <li><a href="#journey">Our journey</a></li>
+      <li><a href="#rsvp">Rsvp</a></li>
+      </ul>
+    </nav>
 
-        <div class="collapse navbar-collapse" id="navbarMenu">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="our_story.html">Our Story</a>
-            <a class="nav-link" href="location.html">Location</a>
-          </div>
+    <!-- HEADER -->
+  <div class="jumbotron jumbotron-fluid">
+    <h1 style="text-align: center" id="top">Choua & Yong</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm center-block text-center">
+        <img src="./svg/cy2.svg" style="height: 100%; width: 100%">
+        </div>
+        <div class="col-sm center-block text-center">
+        <img src="./svg/cy1.svg" style="height: 100%; width: 100%">
         </div>
       </div>
-    </nav>
-  </nav>
-  <h1>Choua & Yong</h1>
-  <img src="img/chouayong1.jpg" style="width: 70%" class="responsive">
-  <h2>October 16, 2021</h2>
-  <h2>2928 N Millbrook Avenue</h2>
-  <h2>Fresno, CA 93703</h2>
+    </div>
   </div>
+
+  <div class="jumbotron-2 jumbotron-fluid">
+    <div class="container">
+    <h3 style="text-align: center" id="journey">Our journey</h3>
+    
+    <div class="container">
+      <div class="row aligns-items-center">
+        <div class="col-sm center-block text-center">
+          <h2>Choua Xiong</h2><br>
+          <p>Hometown: Fresno<br>
+          Current Residence: Redding<br>
+          Graduated: CSU Fresno, FCC<br>
+          Hobbies: Wrapping Presents</br></p>
+        </div>
+        <div class="col-sm center-block text-center">
+          <img src="svg/cy3.svg" style="height: 70%; width: 70%">
+        </div>
+        <div class="col-sm center-block text-center">
+          <h2>Yong Lee</h2><br>
+          Hometown: Crescent City<br>
+          Current Residence: Redding<br>
+          Graduated: CSU Humboldt<br>
+          Hobbies: Building model kits</br></p>
+        </div>
+      </div>
+      <div class="row aligns-items-center" style="margin-top: 40px;">
+        <h2 style="text-align: center">it began...</h2>
+        <p style="text-align: center">Choua and Yong met when Yong was already in college and Choua was finishing high school. Their families were well acquainted with each other. When Yong's parents first met Choua, they knew that she was the one that they would like their son to marry one day. Fortunately, Choua and Yong also liked each other!</p>
+
+        <p style="text-align: center">On their first date, they went to eat frozen yogurt. Yong went to college in northern California where his family have resided for many years and Choua went to college in the Central Valley where she grew up. Their relationship remained long distance for many years, in which they travel many miles just to spend weekends together.</p>
+          
+        <p style="text-align: center">Fast foward 6 years later and they started their wedding ceremony at the beginning of 2020 but due to the pandemic, the rest of the ceremonial festivities were delayed. Join both familiese as they convene in Choua's hometown to complete the traditional rites to their matrimony.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
 
   </body>
