--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </nav>
 
     <!-- HEADER -->
-  <div class="jumbotron jumbotron-fluid">
-    <h1 style="text-align: center" id="top">Choua & Yong</h1>
-    <div class="container">
+  <div class="jumbotron jumbotron-fluid" style="padding-bottom: 80px">
+    <h1 style="text-align: center">Choua & Yong</h1>
+    <div class="container"  id="top">
       <div class="row">
         <div class="col-sm center-block text-center">
         <img src="./svg/cy2.svg" style="height: 100%; width: 100%">
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <div class="jumbotron-2 jumbotron-fluid">
+  <div class="jumbotron-2 jumbotron-fluid" style="padding-top: 80px">
     <div class="container">
     <h3 style="text-align: center" id="journey">Our journey</h3>
     
