--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- SAVE THE DATE -->
   <div class="jumbotron jumbotron-fluid" style="padding-bottom: 80px">
     <h1 style="text-align: center">Choua & Yong</h1>
-    <div class="container"  id="top">
+    <div class="container" id="top" style="text-align: center">
       <div class="row">
         <div class="col-sm center-block text-center">
         <img src="./svg/cy2.svg" style="height: 100%; width: 100%">
@@ -55,7 +55,7 @@
     <div class="container">
     <h3 style="text-align: center" id="journey">Our journey</h3>
     
-    <div class="container">
+    <div class="container" style="text-align: center">
       <div class="row aligns-items-center">
         <div class="col-sm center-block text-center">
           <h2>Choua Xiong</h2><br>
