--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
       <ul>
       <li><a href="#top">Save the date</a></li>
       <li><a href="#journey">Our journey</a></li>
-      <li><a href="#rsvp">Rsvp</a></li>
       </ul>
     </nav>
 
   <!-- SAVE THE DATE -->
   <div class="jumbotron jumbotron-fluid" style="padding-bottom: 80px">
     <h1 style="text-align: center">Choua & Yong</h1>
-    <div class="container" id="top" style="text-align: center">
+    <div class="container" id="top">
       <div class="row">
         <div class="col-sm center-block text-center">
         <img src="./svg/cy2.svg" style="height: 100%; width: 100%">
@@ -52,9 +51,7 @@
 
   <!-- OUR JOURNEY -->
   <div class="jumbotron-2 jumbotron-fluid" style="padding-top: 80px; padding-bottom: 80px">
-    <div class="container">
-    <h3 style="text-align: center" id="journey">Our journey</h3>
-    
+    <h3 style="text-align: center" id="journey">Our journey</h3>    
     <div class="container" style="text-align: center">
       <div class="row aligns-items-center">
         <div class="col-sm center-block text-center">
@@ -84,15 +81,6 @@
         <p style="text-align: center">Fast foward 6 years later and they started their wedding ceremony at the beginning of 2020 but due to the pandemic, the rest of the ceremonial festivities were delayed. Join both familiese as they convene in Choua's hometown to complete the traditional rites to their matrimony.</p>
         </div>
       </div>
-    </div>
-  </div>
-
-  <!-- RSVP -->
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-    <h1 style="text-align: center" id="rsvp">Reservation</h1>
-    <div class="container" style="text-align: center;">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdV2yakCFkU_eEppFXjQwsZVPuOCAJTuKNSKSKzqMtu8PE16w/viewform?embedded=true" width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
   </div>
 
