change calendar image and add color to footer font

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
   </div>
 
   <!-- Footer -->
-  <div class="jumbotron-2 jumbotron-fluid">
-    <div class="container" style="text-align: center; padding-top: 30px; padding-bottom: 30px">
-    &copy 2021 and created by Chelsey See Xiong at <a href="https://www.chelseysee.com">Chelseysee.com</a>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container" style="text-align: center; padding-top: 30px; padding-bottom: 30px; color: #5D4030">
+    &copy 2021 and created by Chelsey See Xiong at <a href="https://www.chelseysee.com" style="color: #5D4030">Chelseysee.com</a>
     </div>
   </div>
 
